--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -2,9 +2,9 @@
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921765.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921777-GettyImages-1316048542-320x200.jpg"><p align="center">印度连12天日增病例逾30万 专家预测峰值</p></a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921765.md#1" title="印度连12天日增病例逾30万 专家预测峰值""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921777-GettyImages-1316048542-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921680.md#1" title="香港法轮佛学会就《大公报》污蔑文章的声明""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921698-DSC_1778-02.jpeg-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920831.md#1" title="【疫情5.3】美国每日平均新增病例不足5万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921873-GettyImages-1315894292-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920295.md#1" title="澳洲防长：已启动审查达尔文港租约""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12920309-GettyImages-1289824257-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921391.md#1" title="中共核弹威胁美国 美国重启核武项目""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921393-000_1FV368-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920831.md#1" title="【疫情5.3】洛杉矶县周日报告零死亡""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921773-GettyImages-1232208921-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920269.md#1" title="从胆小女生到勇敢记者 梁珍讲述修炼故事""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12920549-e429de335c345788531f429d7f6a1337-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919934.md#1" title="美日警告不要擅改东海现状 向中共释何信号""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1172545257-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920280.md#1" title="布林肯：中共是拜登政府最大外交挑战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/000_9298LZ-600x400-1-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/13/n12878121.md#1" title="【独家】中共偷偷删除网上军民融合信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/11/GettyImages-1055941042-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919608.md#1" title="探秘世界各国的真实军力——美军有多强（一）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919611-50037400673_659f7ff6e9_o-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ibqqdx3304.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921736.md#1">匈牙利首都设复旦大学分校 怪异协议遭谴责</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921706.md#1">庆5.13大法日 纽约州奥伯尼市长颁褒奖令</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921765.md#1">印度连12天日增病例逾30万 专家预测峰值</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921525.md#1">共机舰增扰台力度 国军：擦枪走火概率升高</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921546.md#1">四川男吃生肉惹祸 脑内像“一块芝麻饼”</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921591.md#1">富达腰斩蚂蚁集团估值 至1440亿美元</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921162.md#1">遭17年冤狱 四川法轮功学员钟俊芳含冤离世</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921468.md#1">佛州老妇疫情中善举 每周义务煮千人份食物</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921004.md#1">组图：印度医院发生大火 至少18人死亡</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921736.md#1">匈牙利首都设复旦大学分校 怪异协议遭谴责</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921706.md#1">庆5.13大法日 纽约州奥伯尼市长颁褒奖令</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921765.md#1">印度连12天日增病例逾30万 专家预测峰值</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12918882.md#1">【翻墙必看】中共高层多个不妙信号出现</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12917976.md#1">【拍案惊奇】山东号停滞？清末学者预言中共结局</a><br>
@@ -49,6 +49,7 @@
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919329.md#1">【名家专栏】FBI突袭纽约前市长的真正原因</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920822.md#1">大陆房价续下跌 牡丹江房价已跌回14年前</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析对国际社会的影响</a><br>
+<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921162.md#1">遭17年冤狱 四川法轮功学员钟俊芳含冤离世</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921612.md#1">不只弯道超车 中共围剿特斯拉阴谋（下）</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921502.md#1">【新闻大家谈】拜登慢动作美印生隙？中共搅场</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919925.md#1">古天乐黑人替身照热传 影片监制曝秘辛</a><br>
@@ -96,9 +97,8 @@
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911564.md#1">陕西第二任政法委书记赵正永迫害法轮功罪行</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12912506.md#1">香港大纪元就记者遭跟踪滋扰事件声明</a><br>
 <a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911949.md#1">【重播】拜登首次国会演说 共和党代表反驳</a><br>
-<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12912331.md#1">中共在湄公河的投资是一场浮士德式交易</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.250.100.202/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,094</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,094</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
