--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -17,7 +17,9 @@
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911549.md#1" target="_blank">翻开公爵的月历 中世纪欧洲人一整年做什么？</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911549.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911529-Folio_60v_-_The_Coronation_of_the_Virgin-700x420-1-150x120.jpg" align ="left"></a>在西方艺术中，至今发现最精美的月历是在15世纪初的一本装饰手抄本《贝里公爵的豪华时祷书》（The Very Rich Hours of the Duke of Berry）。这本月历的包装精美华丽，里面描绘了许多中世纪宫廷和乡村的恬静景致，同时还有令人惊叹的中世纪建筑——所有绘画都用鲜艳且往往很稀有的颜色上色，再用金箔.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 6:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/26/n12906259.md#1" target="_blank">天堂梦（121）</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/26/n12906259.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>不仅和苏联的赫鲁雪夫弄得反脸，而且东欧共产党国家和几乎所有世界上共产党都远离他，他第一次出征就被钉子碰了回来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12915060.md#1" target="_blank">学会做计划 让学习变得更简单</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12915060.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/WAStudentsGradesAreLow-150x120.jpg" align ="left"></a>计划能力可以让学习变得更容易。无论是小学、中学还是大学生，都可以培养和发展自己的计划能力。俗话说：“失于计划就是在计划失败。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 9:32 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911767.md#1" target="_blank">他们带着记忆转生 与前世亲人再续前缘</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911767.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/08/shutterstock_1292585332-150x120.jpg" align ="left"></a>大千世界无奇不有。你能想像，突然有一天，有一个人来拜访自己，并说自己是其前世的亲人，甚至还记得前世的点点滴滴？事实上，这样的案例近些年来海外媒体报出了不少，尤其在信佛的印度、泰国等国，不过古代中国和近代典籍上早有这类记载。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 2:39 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921798.md#1" target="_blank">采桑子．春之雷阵雨</a><br></h3> 长风起处浓云滚， 一霎天冥，一霎楼冥， 遍撒甘霖细细倾。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921799.md#1" target="_blank">七律：第一声雷</a><br></h3>午夜长风携细雨， 琵琶轻快转徐筝。 盼来新岁前三月， 听得春雷第一声。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 12:08 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921737.md#1" target="_blank">古体四首</a><br></h3>浩瀚大苍穹，如来握掌中。 从此不再灭，金轮转无穷。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 12:05 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920370.md#1" target="_blank">作文选登： 流浪犬有话说</a><br></h3>其实，我也曾是备受宠爱的“掌上明珠”，可“旧的不去，新的不来”，最终，我还是被抛弃了，来到了这险恶的街头地狱，沦落为“阶下囚”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 12:26 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919607.md#1" target="_blank">古体三首</a><br></h3>来来时去去，去去时来来。 来了还又去，去了还又来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919649.md#1" target="_blank">诗歌：夏临</a><br></h3> 青桃黄杏渐长成， 槐花若云摇香风。 睡莲池塘露笑脸， 夜合枝头飞红绒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:10 AM			</td></tr>
@@ -27,8 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12916566.md#1" target="_blank">蝶恋花．花飞如雨春将去</a><br></h3> 阵阵长风三月暮，银瓣翻飞，一霎梨花雨， 粉蝶不知春欲去，与之争美拼相舞。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 5:01 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12916564.md#1" target="_blank">鹧鸪天．问路</a><br></h3>一地落英春欲阑，惜春涉远入郊原。 无边嫩草青山里，几朵梨花翠叶间。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12916551.md#1" target="_blank">歌词：大梦开始的地方（八叠）</a><br></h3>山穷诗去远， 雾在水一方。 大梦连天地， 风雨夜茫茫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 12:05 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914179.md#1" target="_blank">古体二首</a><br></h3>七步走春秋，八斗载诗愁。
-高情出霄汉，有种看王侯。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 12:18 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914181.md#1" target="_blank">一七令．赞神韵</a><br></h3> 音。 神韵，天音。 天仙舞，女高音。 中西合璧，交响和音。 二胡新曲美，委婉妙琴音。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/ibqqdx3304/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
